--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
 
                     <hr class="mt-1 mb-3 pb-2">
 
-                    <div th:replace="services"></div>
+                    <div th:replace="layout-fe/services"></div>
                     <!-- End .feature-boxes-container -->
                 </div>
                 <!-- End .col-lg-9 -->
