--- a/src/main/resources/templates/layout-fe/products.html
+++ b/src/main/resources/templates/layout-fe/products.html
@@ -6,8 +6,8 @@
             <div class="product-default left-details product-widget">
                 <figure>
                     <a href="demo1-product.html">
-                        <img src="assets/images/demoes/demo1/products/small/product-4.jpg" width="84" height="84" alt="product">
-                        <img src="assets/images/demoes/demo1/products/small/product-4-2.jpg" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-4.jpg}" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-4-2.jpg}" width="84" height="84" alt="product">
                     </a>
                 </figure>
                 <div class="product-details">
@@ -32,8 +32,8 @@
             <div class="product-default left-details product-widget">
                 <figure>
                     <a href="demo1-product.html">
-                        <img src="assets/images/demoes/demo1/products/small/product-5.jpg" width="84" height="84" alt="product">
-                        <img src="assets/images/demoes/demo1/products/small/product-5-2.jpg" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-5.jpg}" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-5-2.jpg}" width="84" height="84" alt="product">
                     </a>
                 </figure>
                 <div class="product-details">
@@ -58,8 +58,8 @@
             <div class="product-default left-details product-widget ">
                 <figure>
                     <a href="demo1-product.html">
-                        <img src="assets/images/demoes/demo1/products/small/product-6.jpg" width="84" height="84" alt="product">
-                        <img src="assets/images/demoes/demo1/products/small/product-6-2.jpg" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-6.jpg}" width="84" height="84" alt="product">
+                        <img th:src="@{/fe/images/demoes/demo1/products/small/product-6-2.jpg}" width="84" height="84" alt="product">
                     </a>
                 </figure>
                 <div class="product-details">
