--- a/src/main/resources/templates/layout-fe/banner.html
+++ b/src/main/resources/templates/layout-fe/banner.html
@@ -4,7 +4,7 @@
 							'nav': false
 						}" th:fragment="banner">
   <div class="home-slide home-slide1 banner banner-md-vw banner-sm-vw d-flex align-items-center">
-    <img class="slide-bg" style="background-color: #2699D0;" src="assets/images/demoes/demo1/slider/slide-1.png" width="880" height="428" alt="home-slider">
+    <img class="slide-bg" style="background-color: #2699D0;" th:src="@{/fe/images/demoes/demo1/slider/slide-1.png}" width="880" height="428" alt="home-slider">
     <div class="banner-layer appear-animate" data-animation-name="fadeInUpShorter">
       <h4 class="text-white mb-0">Find the Boundaries. Push Through!</h4>
       <h2 class="text-white mb-0">Summer Sale</h2>
@@ -19,24 +19,10 @@
   <!-- End .home-slide -->
 
   <div class="home-slide home-slide2 banner banner-md-vw banner-sm-vw d-flex align-items-center">
-    <img class="slide-bg" style="background-color: #dadada;" src="assets/images/demoes/demo1/slider/slide-2.jpg" width="880" height="428" alt="home-slider">
+    <img class="slide-bg" style="background-color: #dadada;" th:src="@{/fe/images/demoes/demo1/slider/slide-2.jpg}" width="880" height="428" alt="home-slider">
     <div class="banner-layer text-uppercase appear-animate" data-animation-name="fadeInUpShorter">
       <h4 class="m-b-2">Over 200 products with discounts</h4>
       <h2 class="m-b-3">Great Deals</h2>
-      <h5 class="d-inline-block mb-0 align-top mr-5 mb-2">Starting At
-        <b>$<em>299</em>99</b>
-      </h5>
-      <a href="demo1-shop.html" class="btn btn-dark btn-md ls-10">Get Yours!</a>
-    </div>
-    <!-- End .banner-layer -->
-  </div>
-  <!-- End .home-slide -->
-
-  <div class="home-slide home-slide3 banner banner-md-vw banner-sm-vw  d-flex align-items-center">
-    <img class="slide-bg" style="background-color: #e5e4e2;" src="assets/images/demoes/demo1/slider/slide-3.jpg" width="880" height="428" alt="home-slider" />
-    <div class="banner-layer text-uppercase appear-animate" data-animation-name="fadeInUpShorter">
-      <h4 class="m-b-2">Up to 70% off</h4>
-      <h2 class="m-b-3">New Arrivals</h2>
       <h5 class="d-inline-block mb-0 align-top mr-5 mb-2">Starting At
         <b>$<em>299</em>99</b>
       </h5>
@@ -63,7 +49,7 @@
 						}">
   <div class="banner banner1 banner-hover-shadow d-flex align-items-center mb-2 w-100 appear-animate" data-animation-name="fadeInLeftShorter" data-animation-delay="500">
     <figure class="w-100">
-      <img src="assets/images/demoes/demo1/banners/banner-1.jpg" style="background-color: #dadada;" alt="banner">
+      <img th:src="@{/fe/images/demoes/demo1/banners/banner-1.jpg}" style="background-color: #dadada;" alt="banner">
     </figure>
     <div class="banner-layer">
       <h3 class="m-b-2">Porto Watches</h3>
@@ -74,7 +60,7 @@
   <!-- End .banner -->
   <div class="banner banner2 text-uppercase banner-hover-shadow d-flex align-items-center mb-2 w-100 appear-animate" data-animation-name="fadeInUpShorter" data-animation-delay="200">
     <figure class="w-100">
-      <img src="assets/images/demoes/demo1/banners/banner-2.jpg" style="background-color: #dadada;" alt="banner">
+      <img th:src="@{/fe/images/demoes/demo1/banners/banner-2.jpg}" style="background-color: #dadada;" alt="banner">
     </figure>
     <div class="banner-layer text-center">
       <h3 class="m-b-1 ls-n-20">Deal Promos</h3>
@@ -85,7 +71,7 @@
   <!-- End .banner -->
   <div class="banner banner3 banner-hover-shadow d-flex align-items-center mb-2 w-100 appear-animate" data-animation-name="fadeInRightShorter" data-animation-delay="500">
     <figure class="w-100">
-      <img src="assets/images/demoes/demo1/banners/banner-3.jpg" style="background-color: #dadada;" alt="banner">
+      <img th:src="@{/fe/images/demoes/demo1/banners/banner-3.jpg}" style="background-color: #dadada;" alt="banner">
     </figure>
     <div class="banner-layer text-right">
       <h3 class="m-b-2">Handbags</h3>
@@ -103,8 +89,8 @@
   <div class="product-default inner-quickview inner-icon">
     <figure class="img-effect">
       <a href="demo1-product.html">
-        <img src="assets/images/demoes/demo1/products/product-1.jpg" width="205" height="205" alt="product">
-        <img src="assets/images/demoes/demo1/products/product-1-2.jpg" width="205" height="205" alt="product">
+        <img th:src="@{/fe/images/demoes/demo1/products/product-1.jpg}" width="205" height="205" alt="product">
+        <img th:src="@{/fe/images/demoes/demo1/products/product-1-2.jpg}" width="205" height="205" alt="product">
       </a>
       <div class="label-group">
         <div class="product-label label-hot">HOT</div>
@@ -115,7 +101,7 @@
                 class="fa fa-arrow-right"></i>
         </a>
       </div>
-      <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View">Quick View</a>
+      <a   class="btn-quickview" title="Quick View">Quick View</a>
       <div class="product-countdown-container">
         <span class="product-countdown-title">offer ends in:</span>
         <div class="product-countdown countdown-compact" data-until="2021, 10, 5" data-compact="true">
@@ -127,12 +113,12 @@
     <div class="product-details">
       <div class="category-wrap">
         <div class="category-list">
-          <a href="demo1-shop.html" class="product-category">category</a>
+          <a th:href="@{/products/detail}" class="product-category">category</a>
         </div>
         <a href="wishlist.html" title="Add to Wishlist" class="btn-icon-wish"><i
                 class="icon-heart"></i></a>
       </div>
-      <h3 class="product-title"> <a href="demo1-product.html">Black Grey Headset</a> </h3>
+      <h3 class="product-title"> <a th:href="@{/products/detail}">Black Grey Headset</a> </h3>
       <div class="ratings-container">
         <div class="product-ratings">
           <span class="ratings" style="width:100%"></span>
@@ -158,12 +144,12 @@
         <a href="#" title="Add To Cart" class="btn-icon btn-add-cart product-type-simple"><i
                 class="icon-shopping-cart"></i></a>
       </div>
-      <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View">Quick View</a>
+      <a th:href="@{/products/detail}" class="btn-quickview" title="Quick View">Quick View</a>
     </figure>
     <div class="product-details">
       <div class="category-wrap">
         <div class="category-list">
-          <a href="demo1-shop.html" class="product-category">category</a>
+          <a th:href="@{/products/detail}" class="product-category">category</a>
         </div>
         <a href="wishlist.html" title="Add to Wishlist" class="btn-icon-wish"><i
                 class="icon-heart"></i></a>
@@ -324,11 +310,11 @@
 								}
 							}
 						}">
-  <img src="assets/images/brands/small/brand1.png" width="140" height="60" alt="brand">
-  <img src="assets/images/brands/small/brand2.png" width="140" height="60" alt="brand">
-  <img src="assets/images/brands/small/brand3.png" width="140" height="60" alt="brand">
-  <img src="assets/images/brands/small/brand4.png" width="140" height="60" alt="brand">
-  <img src="assets/images/brands/small/brand5.png" width="140" height="60" alt="brand">
-  <img src="assets/images/brands/small/brand6.png" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand1.png}" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand2.png}" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand3.png}" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand4.png}" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand5.png}" width="140" height="60" alt="brand">
+  <img th:src="@{/fe/images/brands/small/brand6.png}" width="140" height="60" alt="brand">
 </div>
 <!-- End .brands-slider -->
